--- a/program/index.html
+++ b/program/index.html
@@ -429,14 +429,14 @@
                                 <hr>
                                 <div>
                                     12<br>
-                                    30
+                                    40
                                 </div>
                             </div>
                             <div class="image">
                                 <img src="../assets/partners/cansucanca.jpeg" alt="">
                             </div>
                             <div class="text">
-                                <h3 class="item-title">AI Etiği</h3>
+                                <h3 class="item-title">Yapay Zeka Etiği: Giriş ve Uygulama</h3>
                                 <hr/>
                                 <h4>Cansu Canca (Felsefeci, AI Ethics Lab - Kurucu&Direktör)</h4>
                             </div>
@@ -445,7 +445,7 @@
                             <div class="time">
                                 <div>
                                     12<br>
-                                    30
+                                    40
                                 </div>
                                 <hr>
                                 <div>
@@ -670,6 +670,32 @@
                             </div>
                         </div>
                     </div>
+                    <div class="program-container">
+                        <!--   <h3 class="program-day">11 Kasım Çarsamba - 17 Kasım Pazartesi</h3>-->
+                        <h3 class="program-day">10 Kasım - Salı</h3>
+                        <!--<h4 class="program-day">Bu atölyelere katılım sınırlıdır, son hafta bilet alanlara katılım için form gönderilecektir.</h4> -->
+                        <div class="program-item">
+                            <div class="time">
+                                <div>
+                                    18<br>
+                                    00
+                                </div>
+                                <hr>
+                                <div>
+                                    19<br>
+                                    00
+                                </div>
+                            </div>
+                            <div class="image">
+                                <img src="../assets/partners/KorayKocabaşModeratoorBigDataAnalyticsDirektoru.jpg" alt="">
+                            </div>
+                            <div class="text">
+                                <h3 class="item-title">Nasıl Data Scientist Olunmaz?</h3>
+                                <hr/>
+                                <h4>Koray Kocabaş</h4>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div><br/><br/>
             <div class="container container-wide" >
@@ -689,13 +715,15 @@
                         <div class="program-item">
                             
                             <div class="image">
-                                <img src="../assets/partners/ahmetonurdurahim.jpg" alt="">
-                                <img src="../assets/partners/ozcangundes.jpeg" alt="">
+                                <img style="width: 90%;" src="../assets/partners/ozcangundes.jpeg" alt="">
+                                <img style="width: 90%;" src="../assets/partners/ahmetonurdurahim.jpg" alt="">
+                                
                             </div>
                             <div class="text">
                                 <h3 class="item-title">Automatic Topic Classification of News Articles with Deep Learning based Natural Language Processing</h3>
                                 <hr/>
-                                <h4>Özcan Gündeş - Ahmet Onur Durahim</h4>
+                                <h4>Özcan Gündeş - Senior Data Scientist, PRINCIPAI </h4>
+                                <h4>Ahmet Onur Durahim - Founder at PRINCIPAI, Asst. Prof. at Boğaziçi University</h4>
                             </div>
                         </div>
                         <div class="program-item">
@@ -705,8 +733,8 @@
                             <div class="text">
                                 <h3 class="item-title">İleri Analitik Teknolojiler ve Endüstri Uygulamaları</h3>
                                 <hr/>
-                                <h4>Gülcan Gökçeoğlu, İş Danışmanı<br/>
-                                    Dr. Şebnem Güneş Söyler, Veri Bilimci</h4>
+                                <h4>Gülcan Gökçeoğlu, İş Danışmanı, Koç Digital<br/>
+                                    Dr. Şebnem Güneş Söyler, Veri Bilimci, Koç Digital</h4>
                             </div>
                         </div>
                         <div class="program-item">
@@ -716,7 +744,17 @@
                             <div class="text">
                                 <h3 class="item-title">GIS ve Remote Sensing</h3>
                                 <hr/>
-                                <h4>Doktar</h4>
+                                <h4>Batuhan Kavlak - Analyst, Doktar Agricultural Solutions</h4>
+                            </div>
+                        </div>
+                        <div class="program-item">
+                            <div class="image">
+                                <img src="../assets/partners/yagmurguldogus.png" alt="">
+                            </div>
+                            <div class="text">
+                                <h3 class="item-title">Business Analytics</h3>
+                                <hr/>
+                                <h4>Yağmur Güldoğuş - Business Intelligence Specialist, YemekSepeti</h4>
                             </div>
                         </div>
                         <div class="program-item" style="display: none;">
