--- a/program/index.html
+++ b/program/index.html
@@ -475,10 +475,10 @@
                                 </div>
                             </div>
                             <div class="image">
-                                <img style="width: 70%;" src="../assets/partners/KorayKocabaşModeratoorBigDataAnalyticsDirektoru.jpg" alt="">
+                                <img style="width: 70%;" src="../assets/partners/KorayKocabasModeratorBigDataAnalyticsDirektoru.jpg" alt="">
                                 <img style="width: 70%;" src="../assets/partners/MehmetAliErdinemlakjet.comCTO.jpg" alt="">
                                 <img style="width: 70%;" src="../assets/partners/UmutTufancimri.comCTO.jpg" alt="">
-                                <img style="width: 70%;" src="../assets/partners/TanselKılıçOdeonSeniorYazılımDirektoru.jpg" alt="">
+                                <img style="width: 70%;" src="../assets/partners/TanselKilicOdeonSeniorYazilimDirektoru.jpg" alt="">
                             </div>
                             <div class="text">
                                 <h3 class="item-title">Panel</h3>
