--- a/program/index.html
+++ b/program/index.html
@@ -687,7 +687,7 @@
                                 </div>
                             </div>
                             <div class="image">
-                                <img src="../assets/partners/KorayKocabaşModeratoorBigDataAnalyticsDirektoru.jpg" alt="">
+                                <img src="../assets/partners/KorayKocabasModeratorBigDataAnalyticsDirektoru.jpg" alt="">
                             </div>
                             <div class="text">
                                 <h3 class="item-title">Nasıl Data Scientist Olunmaz?</h3>
