--- a/sponsorlar/index.html
+++ b/sponsorlar/index.html
@@ -268,7 +268,7 @@
                             <hr style="border-color: #000;">
                         </div>
 
-                        <div class="col-lg-6 mx-auto" >
+                        <div class="col-lg-4 mx-auto" >
                             <div class="sponsor">
                                 <a target="_blank" href="https://shiftdelete.net/">
                                     <img style="width: 70%;" src="/assets/partners/shiftdelete.jpg" alt="">
@@ -276,7 +276,7 @@
                             </div>
                         </div>
 
-                        <div class="col-lg-6 mx-auto">
+                        <div class="col-lg-4 mx-auto">
                             <div class="sponsor">
                                 <a target="_blank" href="https://www.webtekno.com/">
                                     <img style="width: 70%;" src="/assets/partners/webteknoyeni.png" alt="">
@@ -284,10 +284,10 @@
                             </div>
                         </div>
 
-                        <div class="col-lg-3" style="display: none;">
+                        <div class="col-lg-4 mx-auto">
                             <div class="sponsor">
-                                <a target="_blank" href="https://kodluyoruz.org/">
-                                    <img style="width: 70%;" src="https://miro.medium.com/max/3150/2*TZeK0kyHTRHVv3gUi8BtQg.png" alt="">
+                                <a target="_blank" href="https://teknoloji.org/">
+                                    <img style="width: 70%;" src="/assets/partners/teknolojiorg.png" alt="">
                                 </a>
                             </div>
                         </div>
