ana sayfada duzeltme

--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
                         <h3 style="font-size: 2.4vh">Etkinliğe Kalan Süre</h3>
                         <h3 id="countdownTimer" style="font-size: 2.6vh;"></h3> <!--Kalan süre için 4 Kasım 00:00'ı baz aldım, değiştirmek isterseniz fonksiyon aşağıda. "Nov 4, 2020 00:00:00" şeklinde aratabilirsiniz.-->
                         <h3 style="font-size: 2.4vh;">4 - 11 Kasım</h3>
-                        </p>
+                        <p>
                         <div class="btn btn-primary">
                             <a style="color: white; font-size: 2.4vh;" href="/kayit/">Kayıt Ol!</a>
                         </div>
@@ -133,6 +133,7 @@
                         <div class="btn btn-primary">
                             <a style="color: white; font-size: 2.4vh;" href="/sponsorlar/">Sponsorlarımız</a>
                         </div>
+                        </p>
                         </p>
                         <p>
                         <div class="btn btn-primary">
@@ -171,8 +172,7 @@
                 <p>Boğaziçi DataCamp;</p>
                 <ul class="why-list">
                     <li>
-                        Programlama konseptleri ve algoritmik yaklaşımların bulunduğu Bilgisayar Mühendisliği ve Yönetim Bilişim Sistemi öğrencileri
-                    
+                        Mühendislik, Yönetim Bilişim Sistemleri, Matematik, İstatistik öğrencileri başta olmak üzere Veri Bilimi alanını merak eden tüm üniversite öğrencileri
                     </li>
                     <li>
                         Veri Bilimi ile ilgili profesyoneller
