--- a/program/index.html
+++ b/program/index.html
@@ -176,11 +176,13 @@
                                 </div>
                             </div>
                             <div class="image">
-                                <img src="../assets/partners/RGB-LogoV4.png" alt="">
+                                <img src="../assets/partners/trendyol.jpg" alt="">
                             </div>
                             <div class="text">
-                                <h3 class="item-title"></h3>
-                                <h3><b>Trendyol Group</b> |  Growth Ekibi</h3>
+                                <h3 class="item-title">Growth Ekibi</h3>
+                                <hr/>
+                                <h4>Erdem Inan, CMO, Trendyol Group</h4>
+                                <h4>Nezir Alp, Head of Data Science, Trendyol Group</h4>
                                 
                             </div>
                         </div>
@@ -240,7 +242,7 @@
                                 </div>
                             </div>
                             <div class="image">
-                                <img src="../assets/partners/RGB-LogoV4.png" alt="">
+                                <img src="../assets/partners/heviai.jpg" alt="">
                             </div>
                             <div class="text">
                                 <h3 class="item-title">Panel</h3>
@@ -523,7 +525,7 @@
                                 </div>
                             </div>
                             <div class="image">
-                                <img src="../assets/partners/RGB-LogoV4.png" alt="">
+                                <img src="../assets/partners/trendyol.jpg" alt="">
                             </div>
                             <div class="text">
                                 <h3 class="item-title"></h3>
