deep learnıng türkiyenin panelleri workshopları

--- a/program/index.html
+++ b/program/index.html
@@ -371,9 +371,10 @@
                                 <img src="../assets/partners/dltr.jpg" alt="">
                             </div>
                             <div class="text">
-                                <h3 class="item-title">Panel</h3>
+                                <h3 class="item-title">Panel - Benefits of ML in the Growth of Startup</h3>
                                 <hr/>
-                                <h4>Deep Learning Türkiye</h4>
+                                <h4>Fuat Beşer, Founder of Deep Learning Türkiye</h4>
+                                <h4>Engin Tamer, Lead Machine Learning Engineer</h4>
                             </div>
                         </div>
                     </div>
@@ -568,9 +569,9 @@
                                 <img src="../assets/partners/Only AI Hub.jpg" alt="">
                             </div>
                             <div class="text">
-                                <h3 class="item-title">Panel</h3>
+                                <h3 class="item-title">Panel - How Did They Break into Machine Learning/Data Science?</h3>
                                 <hr/>
-                                <h3>Global AI Hub</h4>
+                                <h4>Mert Çobanoğlu - Data Scientist, Product Engineer at Bosch</h4>
                             </div>
                         </div><div class="program-item">
                             <div class="time">
@@ -715,6 +716,16 @@
                         
                     <div class="program-container">
                         <div class="program-item">
+                            <div class="image">
+                                <img src="../assets/partners/dltr.jpg" alt="">
+                            </div>
+                            <div class="text">
+                                <h3 class="item-title">Introduction to Machine Learning</h3>
+                                <hr/>
+                                <h4>Mert Çobanoğlu - Data Scientist, Product Engineer at Bosch</h4>
+                            </div>
+                        </div>
+                        <div class="program-item">
                             
                             <div class="image">
                                 <img style="width: 90%;" src="../assets/partners/ozcangundes.jpeg" alt="">
@@ -747,6 +758,17 @@
                                 <h3 class="item-title">GIS ve Remote Sensing</h3>
                                 <hr/>
                                 <h4>Batuhan Kavlak - Analyst, Doktar Agricultural Solutions</h4>
+                            </div>
+                        </div>
+                        <div class="program-item">
+                            <div class="image">
+                                <img src="../assets/partners/dltr.jpg" alt="">
+                            </div>
+                            <div class="text">
+                                <h3 class="item-title">Reinforcement Learning</h3>
+                                <hr/>
+                                <h4>Umut Can Altın - Head of Engineering, AR AiTech</h4>
+                                <h4>Uğurkan Ateş - Researcher & PhD candidate at University of Liege</h4>
                             </div>
                         </div>
                         <div class="program-item">
