--- a/program/index.html
+++ b/program/index.html
@@ -245,9 +245,11 @@
                                 <img src="../assets/partners/heviai.jpg" alt="">
                             </div>
                             <div class="text">
-                                <h3 class="item-title">Panel</h3>
+                                <h3 class="item-title">Panel - Radyolojide Yapay Zeka Fırsatları ve Kliniklerde Kullanımı</h3>
                                 <hr/>
-                                <h4>Hevi AI</h4>
+                                <h4>Dr.Deniz Aliş - Chief Executive Officer at Hevi ai & Assistant Professor at Acibadem University</h4>
+                                <h4>Dr.İlkay Öksüz - Assistant Professor at Istanbul Technical University</h4>
+                                <h4>Mert Yergin - Co-Founder at Hevi AI</h4>
                             </div>
                         </div>
                         <div class="program-item">
@@ -373,8 +375,11 @@
                             <div class="text">
                                 <h3 class="item-title">Panel - Benefits of ML in the Growth of Startup</h3>
                                 <hr/>
-                                <h4>Fuat Beşer, Founder of Deep Learning Türkiye</h4>
-                                <h4>Engin Tamer, Lead Machine Learning Engineer</h4>
+                                <h4>Fuat Beşer - Google Developer Expert on ML, Co-CEO at AI
+                                    Business School AG, CEO at Global AI Hub AG)</h4>
+                                <h4>Engin Tamer - Lead ML Engineer</h4>
+                                <h4>Can Dörtkardeşler - Co-Founder and CEO at Udentify</h4>
+                                <h4>Samet Atdağ - Co-Founder and CTO at Prisync</h4>
                             </div>
                         </div>
                     </div>
@@ -566,12 +571,16 @@
                                 </div>
                             </div>
                             <div class="image">
-                                <img src="../assets/partners/Only AI Hub.jpg" alt="">
+                                <img src="../assets/partners/OnlyAIHub.jpg" alt="">
                             </div>
                             <div class="text">
                                 <h3 class="item-title">Panel - How Did They Break into Machine Learning/Data Science?</h3>
                                 <hr/>
-                                <h4>Mert Çobanoğlu - Data Scientist, Product Engineer at Bosch</h4>
+                                <h4>Mert Çobanoğlu - AI Team Lead at Global AI Hub</h4>
+                                <h4>Tuana Çelik</h4>
+                                <h4>Kutay Akalın - Data Scientist & Community Projects Specialist at Global AI Hub</h4>
+                                <h4>İrem Kömürcü - Newsletter Editor at Global AI Hub</h4>
+                                <h4>Fethi Tekyaygil - AI Talent Programme Member at Deep Learning Türkiye</h4>
                             </div>
                         </div><div class="program-item">
                             <div class="time">
@@ -767,7 +776,7 @@
                             <div class="text">
                                 <h3 class="item-title">Reinforcement Learning</h3>
                                 <hr/>
-                                <h4>Umut Can Altın - Head of Engineering, AR AiTech</h4>
+                                <h4>Umut Can Altın - Head of Engineering at AR AiTech</h4>
                                 <h4>Uğurkan Ateş - Researcher & PhD candidate at University of Liege</h4>
                             </div>
                         </div>
