--- a/program/index.html
+++ b/program/index.html
@@ -708,6 +708,32 @@
                             </div>
                         </div>
                     </div>
+                    <div class="program-container">
+                        <!--   <h3 class="program-day">11 Kasım Çarsamba - 17 Kasım Pazartesi</h3>-->
+                        <h3 class="program-day">11 Kasım - Çarşamba</h3>
+                        <!--<h4 class="program-day">Bu atölyelere katılım sınırlıdır, son hafta bilet alanlara katılım için form gönderilecektir.</h4> -->
+                        <div class="program-item">
+                            <div class="time">
+                                <div>
+                                    18<br>
+                                    00
+                                </div>
+                                <hr>
+                                <div>
+                                    19<br>
+                                    00
+                                </div>
+                            </div>
+                            <div class="image">
+                                <img src="../assets/partners/sertacdoganay.jpeg" alt="">
+                            </div>
+                            <div class="text">
+                                <h3 class="item-title">Deep Learning - Machine Learning - Self Learning</h3>
+                                <hr/>
+                                <h4>Sertaç Doğanay - Teknoloji İletişimcisi, Öğretim Görevlisi</h4>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div><br/><br/>
             <div class="container container-wide" >
