--- a/program/index.html
+++ b/program/index.html
@@ -577,7 +577,7 @@
                                 <h3 class="item-title">Panel - How Did They Break into Machine Learning/Data Science?</h3>
                                 <hr/>
                                 <h4>Mert Çobanoğlu - AI Team Lead at Global AI Hub</h4>
-                                <h4>Tuana Çelik</h4>
+                                <h4>Tuana Çelik - Newsletter Editor at Global AI Hub</h4>
                                 <h4>Kutay Akalın - Data Scientist & Community Projects Specialist at Global AI Hub</h4>
                                 <h4>İrem Kömürcü - Newsletter Editor at Global AI Hub</h4>
                                 <h4>Fethi Tekyaygil - AI Talent Programme Member at Deep Learning Türkiye</h4>
