--- a/sponsorlar/index.html
+++ b/sponsorlar/index.html
@@ -211,26 +211,27 @@
                             <h3>Stratejik Partnerler</h3>
                             <hr style="border-color: #000;">
                         </div>
-                        <div class="row" style="align-items: center;"> <!-- buraya bir row ekledim ki global ai ile deep learning tr yan yana olsun-->
-                            <div class="col-lg-12" >
+                        <div class="row align-items-center">
+                            <div class="col-lg-6 mx-auto">
                                 <div class="sponsor">
                                     <a target="_blank" href="http://deeplearningturkiye.org/">
-                                        <img style="width: 100%;" src="/assets/partners/deeplearningtr.png" alt="">
+                                        <img style="width: 70%;" src="/assets/partners/deeplearningtr.png" alt="">
                                     </a>
                                 </div>
                             </div>
-                            <div class="col-lg-12" >
+                            <div class="col-lg-6 mx-auto">
                                 <div class="sponsor">
                                     <a target="_blank" href="https://globalaihub.com/">
-                                        <img style="width: 100%;" src="/assets/partners/globalaihub.png"alt="">
+                                        <img style="width: 70%;" src="/assets/partners/globalaihub.png" alt="">
                                     </a>
                                 </div>
                             </div>
                         </div>
-                        <div class="col-lg-">
+                        
+                        <div class="col-lg-6 mx-auto">
                             <div class="sponsor">
                                 <a target="_blank" href="https://kodluyoruz.org/">
-                                    <img style="width: 50%;" src="https://miro.medium.com/max/3150/2*TZeK0kyHTRHVv3gUi8BtQg.png" alt="">
+                                    <img style="width: 70%;" src="https://miro.medium.com/max/3150/2*TZeK0kyHTRHVv3gUi8BtQg.png" alt="">
                                 </a>
                             </div>
                         </div>
@@ -268,7 +269,7 @@
                             <hr style="border-color: #000;">
                         </div>
 
-                        <div class="col-lg-4 mx-auto" >
+                        <div class="col-lg-3 mx-auto" >
                             <div class="sponsor">
                                 <a target="_blank" href="https://shiftdelete.net/">
                                     <img style="width: 70%;" src="/assets/partners/shiftdelete.jpg" alt="">
@@ -276,7 +277,7 @@
                             </div>
                         </div>
 
-                        <div class="col-lg-4 mx-auto">
+                        <div class="col-lg-3 mx-auto">
                             <div class="sponsor">
                                 <a target="_blank" href="https://www.webtekno.com/">
                                     <img style="width: 70%;" src="/assets/partners/webteknoyeni.png" alt="">
@@ -284,7 +285,7 @@
                             </div>
                         </div>
 
-                        <div class="col-lg-4 mx-auto">
+                        <div class="col-lg-3 mx-auto">
                             <div class="sponsor">
                                 <a target="_blank" href="https://teknoloji.org/">
                                     <img style="width: 70%;" src="/assets/partners/teknolojiorg.png" alt="">
@@ -292,10 +293,10 @@
                             </div>
                         </div>
 
-                        <div class="col-lg-3" style="display: none;">
+                        <div class="col-lg-3 mx-auto">
                             <div class="sponsor">
-                                <a target="_blank" href="https://kodluyoruz.org/">
-                                    <img style="width: 70%;" src="https://miro.medium.com/max/3150/2*TZeK0kyHTRHVv3gUi8BtQg.png" alt="">
+                                <a target="_blank" href="https://hackathonturkiye.com/">
+                                    <img style="width: 70%;" src="/assets/partners/hackathontr.png" alt="">
                                 </a>
                             </div>
                         </div>
