titlelar duzeltildi mulakat simulasyonlari kucultuldu

--- a/program/index.html
+++ b/program/index.html
@@ -866,7 +866,7 @@
                             </div>
                             <div class="text">
                                 <h1 class="item-title"></h1>
-                                <h2>Mülakat Simülasyonları</h2>
+                                <h3>Mülakat Simülasyonları</h3>
                                 
                             </div>
                         </div>
@@ -889,7 +889,7 @@
                             <div class="text">
                                 <h3 class="item-title">Etkili Linkedin Kullanımı</h3>
                                 <hr/>
-                                <h4>Orçun Fıstık, (Linkedin - Kıdemli Bölge Yöneticisi)</h4>
+                                <h4>Orçun Fıstık - Kıdemli Bölge Yöneticisi, Linkedin</h4>
                             </div>
                         </div>
                         <div class="program-item">
@@ -911,7 +911,7 @@
                             <div class="text">
                                 <h3 class="item-title">Teknik Mülakatlara Hazırlık</h3>
                                 <hr/>
-                                <h4>Afşin Akdoğan, (Yazılım Geliştirme Takım Lideri)</h4>
+                                <h4>Afşin Akdoğan -  Yazılım Geliştirme Takım Lideri,Google</h4>
                                 
                             </div>
                         </div>
