deep learning tr titlelar duzeltildi

--- a/program/index.html
+++ b/program/index.html
@@ -375,9 +375,10 @@
                             <div class="text">
                                 <h3 class="item-title">Panel - Benefits of ML in the Growth of Startup</h3>
                                 <hr/>
-                                <h4>Fuat Beşer - Google Developer Expert on ML, Co-CEO at AI
-                                    Business School AG, CEO at Global AI Hub AG)</h4>
-                                <h4>Engin Tamer - Lead ML Engineer</h4>
+                                <h4>Fuat Beşer - Google Developer Expert on Machine Learning, Co-CEO at AI
+                                    Business School AG, CEO at Global AI Hub</h4>
+                                <h4>Engin Tamer - Lead Machine Learning Engineer</h4>
+                                <h4>Damla Dokuzoğlu - Co-Founder and CEO at AppNava</h4>
                                 <h4>Can Dörtkardeşler - Co-Founder and CEO at Udentify</h4>
                                 <h4>Samet Atdağ - Co-Founder and CTO at Prisync</h4>
                             </div>
@@ -577,10 +578,11 @@
                                 <h3 class="item-title">Panel - How Did They Break into Machine Learning/Data Science?</h3>
                                 <hr/>
                                 <h4>Mert Çobanoğlu - AI Team Lead at Global AI Hub</h4>
-                                <h4>Tuana Çelik - Newsletter Editor at Global AI Hub</h4>
-                                <h4>Kutay Akalın - Data Scientist & Community Projects Specialist at Global AI Hub</h4>
-                                <h4>İrem Kömürcü - Newsletter Editor at Global AI Hub</h4>
-                                <h4>Fethi Tekyaygil - AI Talent Programme Member at Deep Learning Türkiye</h4>
+                                <h4>Tuana Çelik - Developer Advocate at cumul.io</h4>
+                                <h4>Fethi Tekyaygil - Fullstack Developer at DeFacto Technology</h4>
+                                <h4>Yiğit Can Taşoğlu - Data Scientist at Bosch</h4>
+                                <h4>İrem Kömürcü - Researcher at İTÜ UHUZAM</h4>
+                                
                             </div>
                         </div><div class="program-item">
                             <div class="time">
@@ -755,9 +757,9 @@
                                 <img src="../assets/partners/dltr.jpg" alt="">
                             </div>
                             <div class="text">
-                                <h3 class="item-title">Introduction to Machine Learning</h3>
+                                <h3 class="item-title">Course: Introduction to Machine Learning</h3>
                                 <hr/>
-                                <h4>Mert Çobanoğlu - Data Scientist, Product Engineer at Bosch</h4>
+                                <h4>Mert Çobanoğlu - AI Team Lead at Global AI Hub</h4>
                             </div>
                         </div>
                         <div class="program-item">
@@ -802,8 +804,8 @@
                             <div class="text">
                                 <h3 class="item-title">Reinforcement Learning</h3>
                                 <hr/>
-                                <h4>Umut Can Altın - Head of Engineering at AR AiTech</h4>
-                                <h4>Uğurkan Ateş - Researcher & PhD candidate at University of Liege</h4>
+                                <h4>Umut Can Altın - CEO at AiTech</h4>
+                                <h4>Uğurkan Ateş - PhD Student & Researcher at University of Liege</h4>
                             </div>
                         </div>
                         <div class="program-item">
