esra yazıcı eklendi

--- a/program/index.html
+++ b/program/index.html
@@ -349,12 +349,12 @@
                                 </div>
                             </div>
                             <div class="image">
-                                <img src="../assets/partners/RGB-LogoV4.png" alt="">
+                                <img src="../assets/partners/esrayazici.jpeg" alt="">
                             </div>
                             <div class="text">
-                                <h3 class="item-title">Konuşma</h3>
+                                <h3 class="item-title">Building Business Intelligence Systems</h3>
                                 <hr/>
-                                <h4>Bireysel Konuşma(Influencer)</h4>
+                                <h4>Esra Yazıcı - BT İş Zekası ve Veri Yönetimi Direktörü, Şişecam</h4>
                             </div>
                         </div>
                         <div class="program-item">
