tolga durdu eklendi

--- a/program/index.html
+++ b/program/index.html
@@ -324,16 +324,16 @@
                                 <hr>
                                 <div>
                                     15<br>
-                                    40
+                                    45
                                 </div>
                             </div>
                             <div class="image">
-                                <img src="../assets/partners/RGB-LogoV4.png" alt="">
+                                <img src="../assets/partners/tolgadurdu.jpeg" alt="">
                             </div>
                             <div class="text">
-                                <h3 class="item-title">Konuşma</h3>
+                                <h3 class="item-title">Banking Industry in Transition: Role of Data Science</h3>
                                 <hr/>
-                                <h4>Finans Sektörü</h4>
+                                <h4>Tolga Durdu, Fibabanka</h4>
                             </div>
                         </div>
                         <div class="program-item">
