--- a/program/index.html
+++ b/program/index.html
@@ -757,7 +757,7 @@
                                 <img src="../assets/partners/dltr.jpg" alt="">
                             </div>
                             <div class="text">
-                                <h3 class="item-title">Course: Introduction to Machine Learning</h3>
+                                <h3 class="item-title">Course (10 Saat): Introduction to Machine Learning</h3>
                                 <hr/>
                                 <h4>Mert Çobanoğlu - AI Team Lead at Global AI Hub</h4>
                             </div>
@@ -934,7 +934,7 @@
                                 <img src="../assets/partners/onurkemalkoc.jpeg" alt="">
                             </div>
                             <div class="text">
-                                <h3 class="item-title">Kariyer Planlama</h3>
+                                <h3 class="item-title">Soru Cevap Oturumu</h3>
                                 <hr/>
                                 <h4>Onur Kemal Koç, (Sosyal Girişimci, Kariyer Koçu)</h4>
                                 
