altin sponsorlar eklendi

--- a/sponsorlar/index.html
+++ b/sponsorlar/index.html
@@ -166,40 +166,40 @@
 
                     </div>
 
-                    <div class="row" style="align-items: center; display: none;">
+                    <div class="row mx-auto" style="align-items: center;">
                         <div class="col-12">
                             <h3>Altın Sponsorlar</h3>
                             <hr style="border-color: #000;">
                         </div>
 
-                        <div class="col-lg-4">
+                        <div class="col-lg-6">
                             <div class="sponsor">
-                                <a target="_blank" href="https://kodluyoruz.org/">
-                                    <img style="width: 70%;" src="https://miro.medium.com/max/3150/2*TZeK0kyHTRHVv3gUi8BtQg.png" alt="">
+                                <a target="_blank" href="https://www.komtas.com/">
+                                    <img style="width: 70%;" src="/assets/partners/komtas.jpg" alt="">
                                 </a>
                             </div>
                         </div>
 
-                        <div class="col-lg-4">
+                        <div class="col-lg-6">
                             <div class="sponsor">
-                                <a target="_blank" href="https://kodluyoruz.org/">
-                                    <img style="width: 70%;" src="https://miro.medium.com/max/3150/2*TZeK0kyHTRHVv3gUi8BtQg.png" alt="">
+                                <a target="_blank" href="https://www.yildizholding.com.tr/">
+                                    <img style="width: 70%;" src="/assets/partners/yildizholding.jpg" alt="">
                                 </a>
                             </div>
                         </div>
 
-                        <div class="col-lg-4">
+                        <div class="col-lg-6">
                             <div class="sponsor">
-                                <a target="_blank" href="https://kodluyoruz.org/">
-                                    <img style="width: 70%;" src="https://miro.medium.com/max/3150/2*TZeK0kyHTRHVv3gUi8BtQg.png" alt="">
+                                <a target="_blank" href="https://www.sisecam.com.tr/">
+                                    <img style="width: 70%;" src="/assets/partners/sisecam.jpg" alt="">
                                 </a>
                             </div>
                         </div>
 
-                        <div class="col-lg-4">
+                        <div class="col-lg-6">
                             <div class="sponsor">
-                                <a target="_blank" href="https://kodluyoruz.org/">
-                                    <img style="width: 70%;" src="https://miro.medium.com/max/3150/2*TZeK0kyHTRHVv3gUi8BtQg.png" alt="">
+                                <a target="_blank" href="https://www.fibabanka.com.tr/">
+                                    <img style="width: 70%;" src="/assets/partners/fibabanka.png" alt="">
                                 </a>
                             </div>
                         </div>
