--- a/sponsorlar/index.html
+++ b/sponsorlar/index.html
@@ -303,40 +303,47 @@
 
                     </div>
         
-                    <div class="row" style="align-items: center; display: none;">
+                    <div class="row mx-auto" style="align-items: center;">
                         <div class="col-12">
-                            <h3>Kampüs Destekçileri</h3>
+                            <h3>Destekçiler</h3>
                             <hr style="border-color: #000;">
                         </div>
 
-                        <div class="col-lg-3">
+                        <div class="col-lg-4">
                             <div class="sponsor">
                                 <a target="_blank" href="https://kodluyoruz.org/">
-                                    <img style="width: 70%;" src="https://miro.medium.com/max/3150/2*TZeK0kyHTRHVv3gUi8BtQg.png" alt="">
+                                    <img style="width: 70%;" src="/assets/partners/microsoft.png" alt="">
                                 </a>
                             </div>
                         </div>
 
-                        <div class="col-lg-3">
+                        <div class="col-lg-4">
                             <div class="sponsor">
                                 <a target="_blank" href="https://kodluyoruz.org/">
-                                    <img style="width: 70%;" src="https://miro.medium.com/max/3150/2*TZeK0kyHTRHVv3gUi8BtQg.png" alt="">
+                                    <img style="width: 70%;" src="/assets/partners/kocdigital.jpg" alt="">
                                 </a>
                             </div>
                         </div>
 
-                        <div class="col-lg-3">
+                        <div class="col-lg-4">
                             <div class="sponsor">
                                 <a target="_blank" href="https://kodluyoruz.org/">
-                                    <img style="width: 70%;" src="https://miro.medium.com/max/3150/2*TZeK0kyHTRHVv3gUi8BtQg.png" alt="">
+                                    <img style="width: 70%;" src="/assets/partners/tarfin.png" alt="">
                                 </a>
                             </div>
                         </div>
 
-                        <div class="col-lg-3">
+                        <div class="col-lg-4 mx-auto">
                             <div class="sponsor">
                                 <a target="_blank" href="https://kodluyoruz.org/">
-                                    <img style="width: 70%;" src="https://miro.medium.com/max/3150/2*TZeK0kyHTRHVv3gUi8BtQg.png" alt="">
+                                    <img style="width: 70%;" src="/assets/partners/principai.jpeg" alt="">
+                                </a>
+                            </div>
+                        </div>
+                        <div class="col-lg-4 mx-auto">
+                            <div class="sponsor">
+                                <a target="_blank" href="https://kodluyoruz.org/">
+                                    <img style="width: 70%;" src="/assets/partners/trendify.png" alt="">
                                 </a>
                             </div>
                         </div>
