acilis konusmalari fotolari

--- a/program/index.html
+++ b/program/index.html
@@ -150,10 +150,13 @@
                                     25
                                 </div>
                             </div>
+                            
                             <div class="image">
-                                <img src="../assets/aciliskonusmalari.jpg" alt="">
-
+                                <img src="../assets/partners/elifbesler.jpeg" alt="">
+                                <img src="../assets/partners/enesdoke.jpeg" alt="">
+                                <img src="../assets/partners/tunatugcu.jpeg" alt="">
                             </div>
+                            
                             <div class="text">
                                 <h3 class="item-title">Açılış Konuşmaları</h3>
                                 <hr/>
