sponsorlara link eklendi

--- a/sponsorlar/index.html
+++ b/sponsorlar/index.html
@@ -262,7 +262,7 @@
                         </div>
 
                     </div>
-                    
+
                     <div class="row mx-auto" style="align-items: center;">
                         <div class="col-12">
                             <h3>Destekçiler</h3>
@@ -271,7 +271,7 @@
 
                         <div class="col-lg-4">
                             <div class="sponsor">
-                                <a target="_blank" href="https://kodluyoruz.org/">
+                                <a target="_blank" href="https://www.microsoft.com/">
                                     <img style="width: 70%;" src="/assets/partners/microsoft.png" alt="">
                                 </a>
                             </div>
@@ -279,7 +279,7 @@
 
                         <div class="col-lg-4">
                             <div class="sponsor">
-                                <a target="_blank" href="https://kodluyoruz.org/">
+                                <a target="_blank" href="https://www.kocdigital.com/">
                                     <img style="width: 70%;" src="/assets/partners/kocdigital.jpg" alt="">
                                 </a>
                             </div>
@@ -287,7 +287,7 @@
 
                         <div class="col-lg-4">
                             <div class="sponsor">
-                                <a target="_blank" href="https://kodluyoruz.org/">
+                                <a target="_blank" href="https://www.tarfin.com/">
                                     <img style="width: 70%;" src="/assets/partners/tarfin.png" alt="">
                                 </a>
                             </div>
@@ -295,19 +295,25 @@
 
                         <div class="col-lg-4 mx-auto">
                             <div class="sponsor">
-                                <a target="_blank" href="https://kodluyoruz.org/">
+                                <a target="_blank" href="http://principai.com/">
                                     <img style="width: 70%;" src="/assets/partners/principai.jpeg" alt="">
                                 </a>
                             </div>
                         </div>
                         <div class="col-lg-4 mx-auto">
                             <div class="sponsor">
-                                <a target="_blank" href="https://kodluyoruz.org/">
+                                <a target="_blank" href="https://trendify.co/">
                                     <img style="width: 70%;" src="/assets/partners/trendify.png" alt="">
                                 </a>
                             </div>
                         </div>
-
+                        <div class="col-lg-4 mx-auto">
+                            <div class="sponsor">
+                                <a target="_blank" href="http://hevi.ai/">
+                                    <img style="width: 70%;" src="/assets/partners/hevisponsor.png" alt="">
+                                </a>
+                            </div>
+                        </div>
                     </div>
 
                     <div class="row align-items-center">
